proj0/tests/correct/test4.inp
* C BETA III IV I CCBF
ISMMQ XZS
