proj0/tests/error/nonreflector.inp
* II BETA III I IV ACDG
ASFD